--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="/assets/images/logo.png" height="40" alt="">
+                <img src="./assets/images/logo.png" height="40" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -88,14 +88,14 @@
                     <h1>PHP Hosting</h1>
                     <h4>Cepat, handal, penuh dengan modul PHP yang Anda butuhkan</h4>
                     <ul>
-                        <li><img src="/assets/svg/checklist.svg" height="18" alt="#"> Solusi PHP untuk performa query yang lebih cepat,</li>
-                        <li><img src="/assets/svg/checklist.svg" height="18" alt="#"> Konsumsi memori yang lebih rendah,</li>
-                        <li><img src="/assets/svg/checklist.svg" height="18" alt="#"> Support PHP 5.3, PHP 5.4, PHP 5.5, PHP 5.6, PHP 7</li>
-                        <li><img src="/assets/svg/checklist.svg" height="18" alt="#"> Fitur enkripsi IonCube dan Zend Guard Loader</li>
+                        <li><img src="./assets/svg/checklist.svg" height="18" alt="#"> Solusi PHP untuk performa query yang lebih cepat,</li>
+                        <li><img src="./assets/svg/checklist.svg" height="18" alt="#"> Konsumsi memori yang lebih rendah,</li>
+                        <li><img src="./assets/svg/checklist.svg" height="18" alt="#"> Support PHP 5.3, PHP 5.4, PHP 5.5, PHP 5.6, PHP 7</li>
+                        <li><img src="./assets/svg/checklist.svg" height="18" alt="#"> Fitur enkripsi IonCube dan Zend Guard Loader</li>
                     </ul>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 text-center">
-                    <img src="/assets/svg/illustration banner PHP hosting-01.svg" class="img-fluid img-hero" alt="">
+                    <img src="./assets/svg/illustration banner PHP hosting-01.svg" class="img-fluid img-hero" alt="">
                 </div>
             </div>
         </div>
@@ -107,15 +107,15 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
-                    <img src="/assets/svg/zendguardfit.svg" alt="">
+                    <img src="./assets/svg/zendguardfit.svg" alt="">
                     <p>PHP Zend Guard Loader</p>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12">
-                    <img src="/assets/svg/composerfit.svg" alt="">
+                    <img src="./assets/svg/composerfit.svg" alt="">
                     <p>PHP Composer</p>
                 </div>
                 <div class="col-xl-3 col-lg-3 col-sm-12">
-                    <img src="/assets/svg/iconcubefit.svg" alt="">
+                    <img src="./assets/svg/iconcubefit.svg" alt="">
                     <p>PHP ionCube Loader</p>
                 </div>
             </div>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-xl-3 col-sm-8 mb-4">
                     <div class="bestseller">
-                        <img src="/assets/svg/bestseller.svg" alt="">
+                        <img src="./assets/svg/bestseller.svg" alt="">
                     </div>
                     <div class="package-card package-card-active">
                         <div class="package-header active">
@@ -269,15 +269,15 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>max execution time 300s</td>
                                 </tr>
                                 <tr style="background-color: #F7F7F7;">
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>max execution time 300s</td>
                                 </tr>
                                 <tr>
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>php memory limit 1024 MB</td>
                                 </tr>
                             </tbody>
@@ -287,15 +287,15 @@
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>post max size 128 MB</td>
                                 </tr>
                                 <tr style="background-color: #F7F7F7;">
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>upload max filesize 128 MB</td>
                                 </tr>
                                 <tr>
-                                    <td><img src="/assets/svg/checklist.svg" alt=""></td>
+                                    <td><img src="./assets/svg/checklist.svg" alt=""></td>
                                     <td>max input vars 2500</td>
                                 </tr>
                             </tbody>
@@ -321,32 +321,32 @@
             <div class="hosting-list">
                 <div class="row justify-content-center">
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/phpallversi.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/phpallversi.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/mysql.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/mysql.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/cpanel.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/cpanel.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/garansi.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/garansi.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/InnoDB.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/InnoDB.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
                     <div class="col-4 col-sm-12">
-                        <img src="/assets/svg/mysqlremote.svg" class="img-fluid" alt="">
+                        <img src="./assets/svg/mysqlremote.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
@@ -371,9 +371,9 @@
                 <div class="col-7 col-sm-12">
                     <p>Tak perlu menggunakan dedicated server ataupun VPS yang mahal. Layanan PHP hosting murah kamu mendukung penuh framework favorit Anda</p>
                     <ul>
-                        <li><img src=" /assets/svg/checklist.svg " height="18 " alt="# "> Install Laravel <b>1 klik</b> dengan Softaculous Installer.</li>
-                        <li><img src="/assets/svg/checklist.svg " height="18 " alt="# "> Mendukung ekstensi <b>PHP MCrypt, phar, mbstring, json,</b> dan <b>fileinfo.</b></li>
-                        <li><img src="/assets/svg/checklist.svg " height="18 " alt="# "> Tersedia <b>Composer</b> dan <b>SSH</b> untuk menginstal packages pilihan Anda.</li>
+                        <li><img src="./assets/svg/checklist.svg " height="18 " alt="# "> Install Laravel <b>1 klik</b> dengan Softaculous Installer.</li>
+                        <li><img src="./assets/svg/checklist.svg " height="18 " alt="# "> Mendukung ekstensi <b>PHP MCrypt, phar, mbstring, json,</b> dan <b>fileinfo.</b></li>
+                        <li><img src="./assets/svg/checklist.svg " height="18 " alt="# "> Tersedia <b>Composer</b> dan <b>SSH</b> untuk menginstal packages pilihan Anda.</li>
                         <p class="note">
                             Nb. Composer dan SSH hanya tersedia pada paket Personal dan Bisnis
                         </p>
@@ -381,7 +381,7 @@
                     </ul>
                 </div>
                 <div class="col-5 col-sm-12 text-center mt-3">
-                    <img src="/assets/svg/laravel.svg" class="img-fluid" alt="">
+                    <img src="./assets/svg/laravel.svg" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -493,7 +493,7 @@
                     <a href="#" class="btn btn-primary btn-active">Pilih Hosting Anda</a>
                 </div>
                 <div class="col-xl-6 col-sm-12">
-                    <img src="/assets/images/Image support.png" class="img-fluid" alt="">
+                    <img src="./assets/images/Image support.png" class="img-fluid" alt="">
                 </div>
             </div>
         </div>
@@ -510,13 +510,13 @@
                 <div class="col-xl-6 col-sm-12 text-right">
                     <ul>
                         <li>
-                            <img src="/assets/svg/socialmedia/facebook.svg" alt="" height="35px"><a href="#">80k</a>
+                            <img src="./assets/svg/socialmedia/facebook.svg" alt="" height="35px"><a href="#">80k</a>
                         </li>
                         <li>
-                            <img src="/assets/svg/socialmedia/twitter.svg" alt="" height="35px"><a href="#">450</a>
+                            <img src="./assets/svg/socialmedia/twitter.svg" alt="" height="35px"><a href="#">450</a>
                         </li>
                         <li>
-                            <img src="/assets/svg/socialmedia/gplus.svg" alt="" height="35px">
+                            <img src="./assets/svg/socialmedia/gplus.svg" alt="" height="35px">
                             <a href="#">1900</a>
                         </li>
                     </ul>
@@ -665,11 +665,11 @@
     <!-- End Footer -->
 
     <!-- JQuery -->
-    <script src="/js/jquery-3.2.1.min.js "></script>
+    <script src="./js/jquery-3.2.1.min.js "></script>
     <!-- Bootstrap -->
-    <script src="/js/bootstrap.min.js "></script>
+    <script src="./js/bootstrap.min.js "></script>
     <!-- Popper -->
-    <script src="/js/popper.min.js "></script>
+    <script src="./js/popper.min.js "></script>
     <!-- FontAwesome -->
     <script src="/js/all.min.js "></script>
 </body>
