--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-xl-3 col-lg-5 col-sm-8 col-8 mb-4">
+                <div class="col-xl-3 col-lg-5 col-md-7 col-sm-8 col-8 mb-4">
                     <div class="package-card package-card-normal">
                         <div class="package-header">
                             <h4 class="border-bottom"><b>Bayi</b></h4>
@@ -157,7 +157,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-5 col-sm-8 col-8 mb-4">
+                <div class="col-xl-3 col-lg-5 col-md-7 col-sm-8 col-8 mb-4">
                     <div class="package-card package-card-normal">
                         <div class="package-header">
                             <h4 class="border-bottom"><b>Pelajar</b></h4>
@@ -183,7 +183,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-5 col-sm-8 col-8 mb-4">
+                <div class="col-xl-3 col-lg-5 col-md-7 col-sm-8 col-8 mb-4">
                     <div class="bestseller">
                         <img src="./assets/svg/bestseller.svg" alt="">
                     </div>
@@ -214,7 +214,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-3 col-lg-5 col-sm-8 col-8 mb-4">
+                <div class="col-xl-3 col-lg-5 col-md-7 col-sm-8 col-8 mb-4">
                     <div class="package-card package-card-normal">
                         <div class="package-header">
                             <h4 class="border-bottom"><b>Bisnis</b></h4>
@@ -259,13 +259,13 @@
     <section class="powerfull ">
         <div class="container ">
             <div class="row justify-content-center">
-                <div class="col-xl-12 col-sm-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     <h4>Powerful dengan Limit PHP yang Lebih Besar</h4>
                 </div>
             </div>
             <div class="powerfull-list">
                 <div class="row justify-content-center">
-                    <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
@@ -283,7 +283,7 @@
                             </tbody>
                         </table>
                     </div>
-                    <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
+                    <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
                         <table class="table table-bordered">
                             <tbody>
                                 <tr>
@@ -314,38 +314,38 @@
     <section class="hosting">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                     <h4>Semua Paket Hosting Sudah Termasuk</h4>
                 </div>
             </div>
             <div class="hosting-list">
                 <div class="row justify-content-center">
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/phpallversi.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/mysql.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/cpanel.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/garansi.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/InnoDB.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
                     </div>
-                    <div class="col-xl-4 col-lg-4 col-sm-12 col-12">
+                    <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                         <img src="./assets/svg/mysqlremote.svg" class="img-fluid" alt="">
                         <h5>PHP Semua Versi</h5>
                         <p>Pilih mulai dari versi PHP 5.3 s/d PHP 7. Ubah sesuka Anda!</p>
@@ -363,12 +363,12 @@
     <section class="action border-bottom">
         <div class="container">
             <div class="row text-center mb-5">
-                <div class="col-xl-12 col-lg-12 col-sm-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     <h4>Mendukung Penuh Framework Laravel</h4>
                 </div>
             </div>
             <div class="row justify-content-center">
-                <div class="col-xl-7 col-lg-6 col-sm-12 col-12">
+                <div class="col-xl-7 col-lg-6 col-md-12 col-sm-12 col-12">
                     <p>Tak perlu menggunakan dedicated server ataupun VPS yang mahal. Layanan PHP hosting murah kamu mendukung penuh framework favorit Anda</p>
                     <ul>
                         <li><img src="./assets/svg/checklist.svg " height="18 " alt="# "> Install Laravel <b>1 klik</b> dengan Softaculous Installer.</li>
@@ -380,7 +380,7 @@
                         <a href="#" class="btn btn-primary btn-active"> Pilih Hosting Anda</a>
                     </ul>
                 </div>
-                <div class="col-xl-5 col-lg-6 col-sm-12 col-12 text-center mt-3">
+                <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 col-12 text-center mt-3">
                     <img src="./assets/svg/laravel.svg" class="img-fluid" alt="">
                 </div>
             </div>
@@ -392,13 +392,13 @@
     <section class="modul">
         <div class="container">
             <div class="row text-center">
-                <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                     <h4>Modul Lengkap untuk Menjalankan Aplikasi PHP Anda.</h4>
                 </div>
             </div>
             <div class="modul-list">
                 <div class="row justify-content-center text-left">
-                    <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                         <ul>
                             <li>IcePHP</li>
                             <li>apc</li>
@@ -416,7 +416,7 @@
                             <li>dba</li>
                         </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                         <ul>
                             <li>http</li>
                             <li>huffman</li>
@@ -436,7 +436,7 @@
                             <li>ldap</li>
                         </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                         <ul>
                             <li>n_pdo_mysql</li>
                             <li>oauth</li>
@@ -454,7 +454,7 @@
                             <li>phalcon</li>
                         </ul>
                     </div>
-                    <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
+                    <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-6">
                         <ul>
                             <li>stats</li>
                             <li>stem</li>
@@ -486,13 +486,13 @@
     <section class="info">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                     <h3>Linux Hosting yang Stabil dengan Teknologi LVE</h3>
                     <p>SuperMicro <b>Intel Xeion 24-Cores</b> server dengan RAM <b>128 GB</b> dan teknologi <b>LVE CloudLinux</b> untuk stabilitas server Anda. Dilengkapi dengan <b>SSD</b> untuk kecepatan <b>MySQL</b> dan caching. Apache load balancer berbasis
                         LiteSpeed Technologies, <b>CageFS</b> security. <b>Raid-10</b> protection dan auto backup untuk kemanan website PHP Anda.</p>
                     <a href="#" class="btn btn-primary btn-active">Pilih Hosting Anda</a>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-sm-12 col-12">
+                <div class="col-xl-6 col-lg-6 col-sm-12 col-12 text-center">
                     <img src="./assets/images/Image support.png" class="img-fluid" alt="">
                 </div>
             </div>
@@ -504,10 +504,10 @@
     <section class="share">
         <div class="container">
             <div class="row">
-                <div class="col-xl-6 col-lg-6 col-sm-12 col-12 text-left">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-left">
                     <p>Bagikan jika Anda menyukai halaman ini.</p>
                 </div>
-                <div class="col-xl-6 col-lg-6 col-sm-12 col-12 text-right">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-right">
                     <ul>
                         <li>
                             <img src="./assets/svg/socialmedia/facebook.svg" alt="" height="35px"><a href="#">80k</a>
@@ -530,10 +530,10 @@
     <section class="help">
         <div class="container">
             <div class="row justify-content-center text-center">
-                <div class="col-xl-8 col-sm-12 col-12">
+                <div class="col-xl-8 col-lg-12 col-md-12 col-md-12 col-sm-12 col-12">
                     <h4>Perlu <b>BANTUAN?</b> Hubungi Kami : <b>0274-5305505</b></h4>
                 </div>
-                <div class="col-xl-4 col-sm-12 col-12">
+                <div class="col-xl-4 col-lg-12 col-md-12 col-sm-12 col-12">
                     <a href="#" class="btn btn-primary btn-package">
                         <i class="fas fa-comments"></i> Live Chat
                     </a>
