--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                         <li>Review Pelangan</li>
                     </ul>
                 </div>
-                <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <ul>
                         <li class="header">NEWSLETTER</li>
                         <li>
@@ -625,7 +625,7 @@
                         <li>Dapatkan promo dan konten menarik dari penyedia hosting terbaik Anda.</li>
                     </ul>
                 </div>
-                <div class="col-">
+                <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6 col-12">
                     <ul>
                         <li class="mt-4">
                             <a href="#"><i class="fab fa-facebook fa-3x"></i></a>
