--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
     <!-- Footer -->
     <section class="footer">
         <div class="container">
-            <div class="row text-left">
+            <div class="row justify-content-center text-left">
                 <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
                     <ul>
                         <li class="header">HUBUNGI KAMI</li>
@@ -592,7 +592,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row text-left mt-5">
+            <div class="row justify-content-center text-left mt-5">
                 <div class="col-xl-3 col-lg-3 col-sm-6 col-6">
                     <ul>
                         <li class="header">TENTANG KAMI</li>
@@ -635,7 +635,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row text-left mt-5">
+            <div class="row justify-content-center text-left mt-5">
                 <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                     <ul>
                         <li class="header">PEMBAYARAN</li>
@@ -652,7 +652,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="row text-left justify-content-center border-top mt-5 pt-3">
+            <div class="row justify-content-center justify-content-center border-top mt-5 pt-3">
                 <div class="col-xl-9 col-sm-12 col-12">
                     <p>Copyright © 2016 Niagahoster | Hosting powered by PHP7,CloudLinux,CloudFlare,BitNinja and DC Biznet Technovillage Jakarta <br>Cloud VPS Murah powered by Webuzo Softaculous, Intel SSD and cloud computing technology</p>
                 </div>
