--- a/index.html
+++ b/index.html
@@ -18,20 +18,32 @@
 
 <body>
 
-    <!-- Informastion -->
-    <nav class="navbar informasi navbar-expand-lg navbar-light bg-white">
-        <div class="container">
-            <a href="#" class="gratis"><i class="fas fa-tag"></i> Gratis Ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-phone-alt"></i>    0274-5305505</a>
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-comments"></i> Live Chat</a>
-                    <a class="nav-item nav-link" href="#"><i class="fas fa-user-circle"></i> Member Area</a>
+
+    <!-- Share -->
+    <section class="information">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-center mb-2">
+                    <a href="#"><i class="fas fa-tag"></i> Gratis Ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-center">
+                    <ul>
+                        <li>
+                            <a href="#"><i class="fas fa-phone-alt"></i> 0274-5305505</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fas fa-comments"></i> Live Chat</a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fas fa-user-circle"></i> Member Area</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
-    </nav>
-    <!-- End Information -->
+    </section>
+    <!-- End Share -->
+
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white">
