--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#"><i class="fas fa-tag"></i> Gratis Ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-center">
-                    <ul>
+                    <ul class="list">
                         <li>
                             <a href="#"><i class="fas fa-phone-alt"></i> 0274-5305505</a>
                         </li>
