--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
                     <h3>Linux Hosting yang Stabil dengan Teknologi LVE</h3>
                     <p>SuperMicro <b>Intel Xeion 24-Cores</b> server dengan RAM <b>128 GB</b> dan teknologi <b>LVE CloudLinux</b> untuk stabilitas server Anda. Dilengkapi dengan <b>SSD</b> untuk kecepatan <b>MySQL</b> dan caching. Apache load balancer berbasis
                         LiteSpeed Technologies, <b>CageFS</b> security. <b>Raid-10</b> protection dan auto backup untuk kemanan website PHP Anda.</p>
-                    <a href="#" class="btn btn-primary btn-active">Pilih Hosting Anda</a>
+                    <a href="#" class="btn btn-primary btn-active mb-5">Pilih Hosting Anda</a>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-sm-12 col-12 text-center">
                     <img src="./assets/images/Image support.png" class="img-fluid" alt="">
