--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
 
 
     <!-- Share -->
-    <section class="information">
+    <section class="information border-bottom">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-center mb-2">
-                    <a href="#"><i class="fas fa-tag"></i> Gratis Ebook 9 Cara Cerdas Menggunakan Domain [x]</a>
+                    <div class="alert alert-default alert-dismissible alert fade show" role="alert">
+                        <a href="#"><i class="fas fa-tag"></i> Gratis Ebook 9 Cara Cerdas Menggunakan Domain</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12 text-center">
-                    <ul class="list">
+                    <ul class="list mt-1">
                         <li>
                             <a href="#"><i class="fas fa-phone-alt"></i> 0274-5305505</a>
                         </li>
@@ -40,6 +45,7 @@
                     </ul>
                 </div>
             </div>
+
         </div>
     </section>
     <!-- End Share -->
@@ -678,10 +684,10 @@
 
     <!-- JQuery -->
     <script src="./js/jquery-3.2.1.min.js "></script>
+    <!-- Bootstrap -->
+    <script src="./js/bootstrap.min.js "></script>
     <!-- Popper -->
     <script src="./js/popper.min.js "></script>
-    <script src="./js/bootstrap.min.js "></script>
-    <!-- Bootstrap -->
     <!-- FontAwesome -->
     <script src="/js/all.min.js "></script>
 </body>
