--- a/index.html
+++ b/index.html
@@ -657,13 +657,19 @@
                 <div class="col-xl-12 col-lg-12 col-sm-12 col-12">
                     <ul>
                         <li class="header">PEMBAYARAN</li>
-                        <li>
-                            <i class="fab fa-cc-amazon-pay fa-4x mr-3"></i>
-                            <i class="fab fa-cc-mastercard fa-4x mr-3"></i>
-                            <i class="fab fa-cc-paypal fa-4x mr-3"></i>
-                            <i class="fab fa-cc-visa fa-4x mr-3"></i>
-                            <i class="fab fa-cc-diners-club fa-4x mr-3"></i>
-                        </li>
+                    </ul>
+                    <ul class="payment">
+                        <li><img src="./assets/payment/bca.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/mandiri.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/bni.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/visa.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/master.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/atm-bersama.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/permatabank.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/atm-prima.svg" class="img-fluid" alt=""></li>
+                        <li><img src="./assets/payment/alto 1.svg" class="img-fluid" alt=""></li>
+                    </ul>
+                    <ul>
                         <li>
                             <p class="mt-2">Aktivasi instan dengan e-Payment, Hosting dan Domain langsung aktif!</p>
                         </li>
