--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
     <!-- Popper -->
     <script src="./js/popper.min.js "></script>
     <!-- FontAwesome -->
-    <script src="/js/all.min.js "></script>
+    <script src="./js/all.min.js "></script>
 </body>
 
 </html>
